# cepheus-build

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  INSTALLERS.md  LICENSE  README.md  build.toml  pyproject.toml
.github/workflows/: app-build.yml  app-release.yml  ci.yml
app/: README.md  pubspec.yaml
app/lib/: build_models.dart  console_actions.dart  console_controls.dart  console_data.dart  console_log.dart  console_logic.dart  console_models.dart  console_panels.dart  console_util.dart  console_widgets.dart  main.dart
app/linux/: CMakeLists.txt
app/test/: build_models_test.dart  console_logic_test.dart  (+2 more)
buildkit/: README.md
cepheus_build/: __init__.py  builder.py  cli.py  commands.py  config.py  container.py  dependency_model.py  environment.py  errors.py  flutter.py  github.py  gopins.py  process.py  release.py  tools.py  validation.py  vm.py
docker/: README.md  compose.yml  versions.env
docs/: adoption.md  auto-update.md  cross-os-builds.md  dependencies.md  installers.md  stores.md
history/: build-history.json
products/: anvil.toml  colorwake-studio.toml  deckhand.toml  foundry.toml  printdeck-agent.toml  printdeck-app.toml  printdeck-server.toml  printdeck.toml
schemas/: product.schema.json
scripts/: cl-update-keygen.sh  flutter-rust-ios-framework.sh  flutter-rust-macos-framework.sh  package-flutter-linux-deb.sh  package-flutter-linux-flatpak.sh  package-flutter-linux-rpm.sh  package-flutter-macos-appstore.sh  package-flutter-macos-developerid.sh  printdeck-server-compose.sh  publish-apt-repo.sh  publish-flatpak-repo.sh  publish-update-feed.sh  publish-yum-repo.sh  sign-linux-gpg.sh  sign-update-eddsa.sh  sign-windows.ps1  submit-msstore.ps1  upload-release.sh  verify-update-eddsa.sh
tests/: conftest.py  test_builder.py  test_cli_smoke.py  test_config.py  test_container.py  test_dependency_model.py  test_environment.py  test_github.py  test_google_play.py  test_gopins.py  test_printdeck_products.py  test_printdeck_windows_target.py  test_process.py  test_provisioning_pins.py  test_release.py  test_validation.py  test_vm.py  test_workflow_contracts.py
(+31 files in other folders)
