[project]
name = "cepheus-build"
version = "0.1.0"
description = "Shared build and release orchestration for Cepheus Labs apps"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
cepheus-build = "cepheus_build.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
